--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ body .primary-button {
 .project {
     margin: 3em 1em 1em 1em;
     padding: .2em;
-    background: #ECF0F1;
+    /* background: #ECF0F1; */
     /* -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;     */
@@ -185,7 +185,8 @@ body .primary-button {
 }
 
 .b-large {
-    padding: .6em 1em .6em 1em;
+    padding: .1em 1em .1em 1em;
+    margin-top: -8px;
 }
 
 .btntext {
@@ -207,9 +208,31 @@ body .primary-button {
 }
 
 .menu {
-    padding-left: 11em;
+    padding-left: 23em;
 }
 
 li, p {
     font-family: 'Muli', sans-serif;
+}
+
+.imgcontainer {
+    -webkit-box-shadow: 0px 1px 5px rgba(43, 36, 41, 0.2);
+    -moz-box-shadow:    0px 1px 5px rgba(43, 36, 41, 0.2);
+    box-shadow:         0px 1px 5px rgba(43, 36, 41, 0.2);
+    border-radius: 5px;
+}
+
+.container {
+
+}
+
+.banner {
+    position: absolute;
+    top: 3.4em;
+    left: 16em;
+}
+
+.meal-description {
+    text-align: center;
+    width: 98%;
 }
