--- a/main.css
+++ b/main.css
@@ -233,7 +233,7 @@ li, p {
 .profile-header {
     font-size: 200%;
     padding-left: .5em;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Muli', sans-serif;
 }
 .universal-padding {
     padding: 1em 0 .5em 1em;
@@ -241,4 +241,29 @@ li, p {
 
 .edit-profile {
 
+}
+
+.bio-text {
+    margin-top: 0px;
+}
+
+.body-headers {
+    font-size: 200%;
+}
+.listing-header {
+    font-size: 300%;
+    padding: 1em;
+    font-family: 'Muli', sans-serif;
+    margin-left: 2.7em;
+}
+.profile-container {
+    -webkit-box-shadow: 0px 1px 5px rgba(43, 36, 41, 0.2);
+    -moz-box-shadow: 0px 1px 5px rgba(43, 36, 41, 0.2);
+    box-shadow: 0px 1px 5px rgba(43, 36, 41, 0.2);
+    border-radius: 5px;
+}
+.none {
+    font-size: 1em;
+    margin-left: 1em;
+    padding: 0;
 }
